--- a/css/main.css
+++ b/css/main.css
@@ -68,13 +68,14 @@ img {
   margin-bottom: 0;
 }
 
-a {
-  text-decoration: none;
-}
-
 p {
   line-height: 30px;
   font-weight: normal;
+}
+
+.current {
+  font-weight: bold;
+  color: #337ab7 !important;
 }
 
 .portfolio-box-caption {
@@ -87,6 +88,7 @@ p {
   left: 0;
   width: 100%;
   height: 100%;
+  cursor: pointer;
   transition: all .35s;
 }
 
@@ -96,6 +98,11 @@ p {
   top: 50%;
   transform: translateY(-50%);
   width: 100%;
+}
+
+.description {
+  text-align: left;
+  padding: 5%;
 }
 
 .item {
@@ -110,16 +117,17 @@ p {
 }
 
 .about-me {
-  padding: 80px 0;
+  padding: 90px 0;
 }
 
 .about-title {
   margin-top: 10px;
 }
 
-#leetcode {
+#skills {
   background-color: #ebeeee;
   color: #7A7A7A;
+  padding: 80px 0;
 }
 
 .title-leet {
@@ -134,6 +142,7 @@ p {
 
 #contact {
   font-size: 20px;
+  padding: 70px 0;
 }
 
 .content-modal {
@@ -155,6 +164,7 @@ p {
 footer {
   background-color: #0D0D0D;
   color: #303030;
+  padding: 30px 0;
 }
 
 .icons {
